<resources>
    <string name="app_name" translatable="false">MindVocab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="percentage" translatable="false">%d%%</string>
    <string name="amount_of" translatable="false">%1$d/%2$d</string>
    <string name="amount_of_words" translatable="false">%1$d of %2$d</string>
    <string name="time" translatable="false">%1$d:%2$d</string>
    <string name="dismiss">Dismiss</string>
    <string name="confirm">Confirm</string>
    <string name="no_required_args_error" translatable="false">No required arguments</string>
    <string name="no_required_specific_args_error" translatable="false">Could not find %1$s in %2$s to fill label %3$s</string>
    <string name="select_category_content_description">Select category icon</string>
    <string name="confirm_categories_content_description">Confirm categories icon</string>
    <string name="notifications_content_description">Notifications icon</string>
    <string name="show_list_for_words_content_description">Show list of words icon</string>
    <string name="empty_password_error_text">Password field should not be empty.</string>
    <string name="sign_in_title">Sign in</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="or">Or</string>
    <string name="email_hint" translatable="false">Email</string>
    <string name="sign_in_button_text">Enter</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="i_don_t_have_an_account">Not with MindVocab yet?</string>
    <string name="create_account">Get started</string>
    <string name="empty_login_error_text">Login field should not be empty.</string>
    <string name="no_such_account_error_text">Could not sign you in, check login or password.</string>
    <string name="sign_up_title">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="repeat_your_password_hint">Repeat your password</string>
    <string name="create_account_button_text">Create</string>
    <string name="i_already_have_an_account">I already have an account!</string>
    <string name="account_already_exists_error_text">Account already exists.</string>
    <string name="empty_email_error_text">Email field should not be empty.</string>
    <string name="empty_username_error_text">Username field should not be empty.</string>
    <string name="password_mismatch_error_text">Your passwords are different.</string>
    <string name="learn_title">Learning</string>
    <string name="words_title">Words</string>
    <string name="word_set_choose_title">Word set selection</string>
    <string name="max_amount_of_words_started">of %d words started</string>
    <string name="icon_timeout_of_words_for_today_content_description">Icon timeout of words for today</string>
    <string name="word_status_new">New word</string>
    <string name="word_status_in_progress">Learning</string>
    <string name="word_status_known">Known</string>
    <string name="word_status_learned">Learned</string>
    <string name="listen_word_content_description">Listen word</string>
    <string name="word_image_content_description">Word image</string>
    <string name="word_translation">Translation</string>
    <string name="word_explanation">Explanation</string>
    <string name="word_examples">Examples</string>
    <string name="word_known">Know</string>
    <string name="word_to_learn">To learn</string>
    <string name="return_to_previous_word_content_description">Return to previous word icon</string>
    <string name="exception_image_content_description">Exception image</string>
    <string name="no_learning_words_exception_text_title">Nothing!</string>
    <string name="no_learning_words_exception_text">Choose which words you will learn. Click on the word set (category) icon on the screen or in the upper right corner.</string>
    <string name="learning_words_timeout_exception_text_title">That`s it for today!</string>
    <string name="learning_words_timeout_exception_text">You could go to the repeating screen to practise or increase learning words a day in settings.</string>
    <string name="all_words_filter">All</string>
    <string name="word_set_search_query_query">Search through word sets.</string>
    <string name="word_status_icon_content_description">Word status icon</string>
    <string name="word_set_image_content_description">Word set image</string>
    <string name="is_word_set_selected_icon_content_description">Is word set selected icon</string>
    <string name="repeat_title">Repeating</string>
    <string name="listen_the_word_content_description">Listen the word</string>
    <string name="word_remember">Remembered</string>
    <string name="return_to_previous_repeat_word__content_description">Return to previous word</string>
    <string name="word_forgot">Forgot</string>
    <string name="correct_answer">Correct!</string>
    <string name="your_answer_hint">Your answer</string>
    <string name="no_words_to_repeat_exception_title">No words to repeat</string>
    <string name="no_words_to_repeat_exception_subtitle">But you could go to learning screen to select one! (if they are available)</string>
    <string name="words_to_repeat_in_timeout_exception_title">Let`s wait until tomorrow!</string>
    <string name="words_to_repeat_in_timeout_exception_subtitle">You could watch list of words to see when they will be available.</string>
    <string name="repeating_word_started_at">Started at</string>
    <string name="repeating_word_last_repeated_at">Last repeated at</string>
    <string name="repeating_word_progress">Progress</string>
    <string name="statistic_title">Statistic</string>
    <string name="days_in_a_row">days in a row</string>
    <string name="notifications_screen_title">Notifications</string>
    <string name="share">Share</string>
    <string name="achievement_image_content_description">Achievement image</string>
    <string name="close_achievement_dialog_content_description">Close achievement dialog icon</string>
    <string name="achievements_statistic_title">Achievements</string>
    <string name="icon_all_words_metric_content_description">Icon all words metric</string>
    <string name="icon_achievements_metrics_content_description">Icon achievements metrics</string>
    <string name="completed_sets">Completed sets:</string>
    <string name="completed_sets_empty_list_text">Keep learning to see word sets here!</string>
    <string name="repeating_words_title">Repeating words</string>
    <string name="total_words_statistic">Total words</string>
    <string name="achievements_statistic">Achievements</string>
    <string name="words_left_statistic">Left</string>
    <string name="words_in_progress_statistic">In progress</string>
    <string name="words_known_statistic">Known</string>
    <string name="words_learned_statistic">Learned</string>
    <string name="markers_on_calendar_dialog_title">Markers on Calendar</string>
    <string name="only_started_marker_explanation">If at least one word was started on specific day.</string>
    <string name="only_repeated_marker_explanation">If at least one word was repeated on specific day.</string>
    <string name="only_started_and_repeated_marker_explanation">If at least one word was repeated AND started on specific day.</string>
    <string name="calendar_touch_hint">You can touch any day with marker to see actions on that day.</string>
    <string name="started_and_repeated_day_marker_content_description">Started and repeated day marker</string>
    <string name="repeated_day_marker_content_description">Repeated day marker</string>
    <string name="started_day_marker_content_description">Started day marker</string>
    <string name="icon_achievement_completed_content_description">Icon achievement completed</string>
    <string name="day_statistic_title">Day statistic</string>
    <string name="new_words_list">New words:</string>
    <string name="repeated_words_list">Repeated words:</string>
    <string name="title_browser">Browser</string>
    <string name="browser_not_available_image_content_description">Browser not available image</string>
    <string name="browser_not_available_text">This feature is not available yet</string>
    <string name="title_settings">Settings</string>
    <string name="button_to_change_settings_content_description">Button to change settings</string>
    <string name="dismiss_settings_dialog_content_description">Dismiss settings dialog</string>
    <string name="settings_dialog_drag_icon_content_description">Settings dialog drag icon</string>
    <string name="account_full_name" translatable="false">%1$s %2$s</string>
    <string name="old_password_hint">Old password</string>
    <string name="new_password_hint">New password</string>
    <string name="repeat_new_password_hint">Repeat new password</string>
    <string name="change_password">Change password</string>
    <string name="fill_all_fields_error_text">Fill all fields to change your password</string>
    <string name="new_passwords_mismatch_error_text">New passwords mismatch</string>
    <string name="new_password_equals_old_one_error_text">Old and new passwords are the same</string>
    <string name="wrong_old_password_error_text">Wrong old password</string>
    <string name="password_successfully_changed">Password changed</string>
    <string name="change_username_settings_title">Change username</string>
    <string name="change_username">Change</string>
    <string name="new_username_equals_old_one_error_text">Old and new passwords are the same</string>
    <string name="username_successfully_changed">Username changed</string>
    <string name="change_full_name_settings_title">Change full name</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="full_name_successfully_changed">Full name changed</string>
    <string name="account_edit_settings">Editing</string>
    <string name="account_edit_main_info_title">Main information</string>
    <string name="account_edit_email_subtitle" translatable="false">Email</string>
    <string name="account_edit_username_subtitle">Username</string>
    <string name="account_edit_full_name_subtitle">Full name</string>
    <string name="account_edit_password_subtitle">Password</string>
    <string name="account_edit_password_change_title">Password change</string>
    <string name="account_edit_account_actions_title">Account actions</string>
    <string name="account_edit_reset_account_progress_button">Reset account progress</string>
    <string name="account_edit_logout_account_button">Logout</string>
    <string name="account_photo_content_description">Account photo</string>
    <string name="account_add_photo_content_description">Add account photo</string>
    <string name="account_settings_content_description">Account settings</string>
    <string name="dialog_title_logout">Do you want to logout?</string>
    <string name="dialog_title_reset_account_data">All your words, word sets, achievements progress will be deleted. Continue?</string>
    <string name="account_change_password_title">Change password</string>
    <string name="additional_settings_title">Additionally</string>
    <string name="share_application_settings">Share app</string>
    <string name="share_application_settings_content_description">Share application icon</string>
    <string name="support_settings">Support</string>
    <string name="support_settings_content_description">Support action icon</string>
    <string name="about_us_settings">About us</string>
    <string name="application_theme_settings">Theme</string>
    <string name="application_theme_settings_helping_text">You may need to restart the application to see the result.</string>
    <string name="notifications_title">Notifications</string>
</resources>