<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/learn">

    <fragment
        android:id="@+id/learn"
        android:name="com.example.mindvocab.screens.learn.LearnWordFragment"
        android:label="@string/learn_title"
        tools:layout="@layout/fragment_learn_word" >
        <action
            android:id="@+id/action_learn_to_wordSetsFragment"
            app:destination="@id/wordSetsFragment" />
    </fragment>
    <fragment
        android:id="@+id/repeat"
        android:name="com.example.mindvocab.screens.repeat.RepeatWordFragment"
        android:label="@string/repeat_title"
        tools:layout="@layout/fragment_repeat_word" >
        <action
            android:id="@+id/action_repeat_to_repeatingWordsFragment"
            app:destination="@id/repeatingWordsFragment" />
    </fragment>
    <fragment
        android:id="@+id/statistic"
        android:name="com.example.mindvocab.screens.statistic.StatisticFragment"
        android:label="@string/statistic_title"
        tools:layout="@layout/fragment_statistic" >
        <action
            android:id="@+id/action_statistic_to_notificationsFragment"
            app:destination="@id/notificationsFragment" />
    </fragment>
    <fragment
        android:id="@+id/browser"
        android:name="com.example.mindvocab.screens.browser.BrowserFragment"
        android:label="@string/title_browser"
        tools:layout="@layout/fragment_browser" />
    <fragment
        android:id="@+id/settings"
        android:name="com.example.mindvocab.screens.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" >
        <action
            android:id="@+id/action_settings_to_accountEditFragment"
            app:destination="@id/accountEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/wordSetsFragment"
        android:name="com.example.mindvocab.screens.learn.wordset.WordSetsFragment"
        android:label="@string/word_set_choose_title"
        tools:layout="@layout/fragment_word_sets" >
        <action
            android:id="@+id/action_wordSetsFragment_to_wordsFragment"
            app:destination="@id/wordsFragment" />
        <action
            android:id="@+id/action_wordSetsFragment_to_learn"
            app:destination="@id/learn" />
    </fragment>
    <fragment
        android:id="@+id/wordsFragment"
        android:name="com.example.mindvocab.screens.word.WordsFragment"
        android:label="@string/words_title"
        tools:layout="@layout/fragment_words" >
        <argument
            android:name="wordSetId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/notificationsFragment"
        android:name="com.example.mindvocab.screens.statistic.notifications.NotificationsFragment"
        android:label="@string/notifications_title"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/accountEditFragment"
        android:name="com.example.mindvocab.screens.settings.account.edit.AccountEditFragment"
        android:label="@string/account_edit_settings"
        tools:layout="@layout/fragment_settings_account" />
    <fragment
        android:id="@+id/repeatingWordsFragment"
        android:name="com.example.mindvocab.screens.repeat.list.RepeatingWordsFragment"
        android:label="@string/repeating_words_title"
        tools:layout="@layout/fragment_repeating_words" />
</navigation>