<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/learn"
    app:startDestination="@id/learnWordFragment">
    <fragment
        android:id="@+id/learnWordFragment"
        android:name="com.example.mindvocab.screens.learn.LearnWordFragment"
        android:label="@string/learn_title" >
        <action
            android:id="@+id/action_learnWordFragment_to_wordSetsFragment"
            app:destination="@id/wordSetsFragment" />
    </fragment>
    <fragment
        android:id="@+id/wordSetsFragment"
        android:name="com.example.mindvocab.screens.learn.wordset.WordSetsFragment"
        android:label="@string/word_set_choose_title"
        tools:layout="@layout/fragment_word_sets" >
        <action
            android:id="@+id/action_wordSetsFragment_to_wordsFragment"
            app:destination="@id/wordsFragment" />
    </fragment>

    <fragment
        android:id="@+id/wordsFragment"
        android:name="com.example.mindvocab.screens.learn.wordset.words.WordsFragment"
        android:label="@string/words_title" />

</navigation>