<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.signup.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_screen_padding">

        <TextView
            android:id="@+id/signUpHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textSize="@dimen/main_heading_size"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary"
            android:textAlignment="center"
            android:layout_marginTop="150dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/email_hint"
            app:helperTextEnabled="true"
            style="@style/InputTextContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/username_hint"
            app:helperTextEnabled="true"
            style="@style/InputTextContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordFieldContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/password_hint"
            app:helperTextEnabled="true"
            style="@style/InputTextContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRepeatContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:hint="@string/repeat_your_password_hint"
            app:helperTextEnabled="true"
            style="@style/InputTextContainer">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRepeatField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/create_account_button_text"
            app:backgroundTint="?attr/colorPrimaryContainer"
            android:textColor="?attr/colorOnPrimaryContainer"
            app:cornerRadius="14dp"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/accountExistsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/i_already_have_an_account"
            android:textAlignment="center"
            android:textSize="@dimen/simple_text_size"
            android:textColor="?attr/colorOnPrimary"
            android:layout_marginTop="90dp"/>
    </LinearLayout>

</ScrollView>