<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_screen_padding"
    tools:context=".screens.settings.account.password.ChangePasswordFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/old_password_hint"
        style="@style/InputTextContainer"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/oldPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password_hint"
        android:layout_marginTop="10dp"
        style="@style/InputTextContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_new_password_hint"
        android:layout_marginTop="5dp"
        style="@style/InputTextContainer">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/newPasswordRepeatField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/change_password"
        app:backgroundTint="?attr/colorPrimaryContainer"
        android:textColor="?attr/colorOnPrimaryContainer"
        app:cornerRadius="14dp"
        android:padding="15dp"
        />

</LinearLayout>